<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">

    <ScrollView
        android:id="@+id/mySV"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/topLayout"
                android:orientation="vertical"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_logo_white"
                    android:layout_width="200dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_marginTop="20dp"
                    style="@style/TimeRegistrationText"
                    android:textColor="@color/colorWhite"
                    android:text="@string/registrate_time_on_call"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textAlignment="center"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/projectView"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/spin_back"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_main_btn">

                    <EditText
                        android:id="@+id/projectEt"
                        android:layout_toStartOf="@id/dropdown_project"
                        style="@style/SpinEditText"
                        android:text="@string/project"
                        android:inputType="none"
                        tools:ignore="Autofill" />

                    <Spinner
                        android:layout_below="@id/projectEt"
                        android:id="@+id/productSpin"
                        style="@style/MainSpinner" />

                    <ImageView
                        android:id="@+id/dropdown_project"
                        android:src="@drawable/ic_drop_down"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="30dp"
                        android:layout_width="@dimen/size_drop_down_ic"
                        android:layout_height="@dimen/size_drop_down_ic"
                        tools:ignore="ContentDescription" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/taskView"
                    android:layout_marginTop="@dimen/margins_time_reg_ets"
                    android:background="@drawable/spin_back"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_main_btn">

                    <EditText
                        android:id="@+id/taskEt"
                        android:layout_toStartOf="@id/dropdown_task"
                        style="@style/SpinEditText"
                        android:text="@string/task"
                        android:inputType="none"
                        tools:ignore="Autofill" />

                    <Spinner
                        android:layout_below="@id/taskEt"
                        android:id="@+id/taskSpin"
                        style="@style/MainSpinner" />

                    <ImageView
                        android:id="@+id/dropdown_task"
                        android:src="@drawable/ic_drop_down"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="30dp"
                        android:layout_width="@dimen/size_drop_down_ic"
                        android:layout_height="@dimen/size_drop_down_ic"
                        tools:ignore="ContentDescription" />

                </RelativeLayout>

                <EditText
                    android:id="@+id/commentEt"
                    android:text="@string/phone_conversation"
                    android:layout_marginTop="@dimen/margins_time_reg_ets"
                    style="@style/MainEditText"
                    android:hint="@string/comment"
                    android:inputType="none"
                    android:focusable="false"
                    tools:ignore="Autofill" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margins_time_reg_ets"
                    android:background="@drawable/spin_back"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="@dimen/height_main_et_mid">

                    <EditText
                        android:id="@+id/callduration"
                        android:background="@color/colorTransparent"
                        android:hint="@string/_00_00_00"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:fontFamily="@font/montserrat_semibold"
                        android:textSize="40sp"
                        android:layout_height="match_parent"
                        android:layout_width="220dp"
                        android:textAlignment="center"
                        android:maxLength="8"
                        android:lines="1"
                        android:inputType="none"
                        android:focusable="false"
                        tools:ignore="Autofill" />

                    <ImageView
                        android:id="@+id/questionBtn"
                        android:visibility="gone"
                        android:src="@drawable/ic_question"
                        android:layout_marginStart="10dp"
                        android:layout_width="@dimen/size_icon_registration_time_middle"
                        android:layout_height="@dimen/size_icon_registration_time_middle"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

                <android.support.constraint.ConstraintLayout
                    android:layout_marginTop="@dimen/margins_time_reg_ets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.constraint.Guideline
                        android:id="@+id/guideline1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.45" />

                    <android.support.constraint.Guideline
                        android:id="@+id/guideline2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.55" />

                    <EditText
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/guideline1"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/starttime"
                        android:layout_width="0dp"
                        style="@style/MainEditText"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textAlignment="center"
                        android:hint="@string/start"
                        android:inputType="none"
                        android:focusable="false"
                        tools:ignore="Autofill" />

                    <EditText
                        app:layout_constraintStart_toStartOf="@id/guideline2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/endtime"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_alignParentEnd="true"
                        android:layout_width="0dp"
                        style="@style/MainEditText"
                        android:textAlignment="center"
                        android:hint="@string/end"
                        android:inputType="none"
                        android:focusable="false"
                        tools:ignore="Autofill" />

                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.constraint.Guideline
                        android:id="@+id/guideline3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.45" />

                    <android.support.constraint.Guideline
                        android:id="@+id/guideline4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.55" />

                    <Button
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/guideline3"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:id="@+id/cancelBtn"
                        android:layout_width="0dp"
                        android:text="@string/cancel"
                        android:background="@drawable/back_cancel"
                        android:layout_marginBottom="30dp"
                        style="@style/DefaultButton" />

                    <Button
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/registertime"
                        android:layout_alignParentEnd="true"
                        android:text="@string/register_time"
                        android:layout_width="0dp"
                        android:background="@drawable/back_done"
                        style="@style/DefaultButton" />

                </android.support.constraint.ConstraintLayout>

            </LinearLayout>



        </LinearLayout>

    </ScrollView>

</RelativeLayout>