<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_auth_back">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/imagelayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline">

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.12" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.88" />

        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_logo_auth"
            tools:ignore="ContentDescription" />

    </android.support.constraint.ConstraintLayout>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/imagelayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.14" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.86" />

            <LinearLayout
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/url"
                    style="@style/AuthEditText"
                    android:hint="@string/portlr_url_clientname_portlr_com"
                    android:inputType="textUri"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/email"
                    style="@style/AuthEditText"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/password"
                    style="@style/AuthEditText"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    tools:ignore="Autofill" />

                <Button
                    android:id="@+id/login"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/montserrat_semibold"
                    style="@style/AuthEditButton"
                    android:textAllCaps="false" />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
